updated to increase the permgen
git-svn-id: https://anonsvn.jboss.org/repos/labs/labs/jbosstm/trunk@37407 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70